tests/neg/magic-offset-header-c.scala

def userCode =
  val x: String = 0  // error
